# hosting-yolo-fastapi

./: .gitignore  README.md  pyproject.toml  requirements.txt  test-curls.sh
yolofastapi/: main.py
yolofastapi/detectors/: yolov8.py
yolofastapi/routers/: yolo.py
yolofastapi/schemas/: yolo.py
