[tool.poetry]
name = "yolofastapi"
version = "0.1.0"
description = ""
authors = ["Alexander Foley <afoley@getsporttrade.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ultralytics = "^8.0.203"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
asyncio = "^3.4.3"
opencv-python = "^4.8.1.78"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
